--- a/site/index.html
+++ b/site/index.html
@@ -150,7 +150,7 @@
                                     <button class="bg-red" type="submit">Submit</button>
                                 </form>
                             </li>
-                            <li class="bg-gray">
+                            <!-- <li class="bg-gray">
                                 <center><h2>Preview</h2></center>
                                 <table class='table table-sm table-borderless'>
                                     {% if result %}
@@ -206,7 +206,7 @@
                                     </tr>
                                     {% endif %}
                                 </table>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                 </div>
